correct wordspacing

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@
 }
 h1,h2,h3,h4, .categoriesName {
   width: 90%;
-  word-spacing: 0.5em;
   margin-left: 10%;
   margin-right: 10%;
   color: #45D932 ;
